# Functor

./: .clang-format  CMakeLists.txt  README.md
include/: Compose.hpp  Functor.hpp  Identity.hpp  Monad.hpp  PartialApplication.hpp  Range.hpp  RewriteOperator.hpp  Traits.hpp
tests/: Compose.cpp  Functor.cpp  Identity.cpp  Monad.cpp  PartialApplication.cpp  Range.cpp  RewriteOperator.cpp  Traits.cpp
