cmake_minimum_required(VERSION 3.16)
project(Functor)
enable_language(CXX)
find_package(Catch2 REQUIRED)
find_package(fmt REQUIRED)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
if(WIN32)
else()
    set(CMAKE_CXX_FLAGS "-fconcepts-diagnostics-depth=5 -Wall -Wextra -Wformat-nonliteral -Wcast-align -Wpointer-arith -Winline -Wundef  -Wcast-qual -Wshadow -Wwrite-strings -Wno-unused-parameter -Wfloat-equal -pedantic -ansi -Wpessimizing-move  -Wredundant-move")
endif()
include_directories(include/)
add_executable(mainTest tests/Identity.cpp tests/Monad.cpp tests/Traits.cpp tests/Functor.cpp)
target_link_libraries(mainTest Catch2::Catch2WithMain fmt::fmt)

enable_testing()
include(Catch)
include(CTest)
include(ParseAndAddCatchTests)
catch_discover_tests(mainTest)